app/styles/views/feed.scss
#feed {
    position: relative;
    width: 100px;
    flex: 0 0 100px;
    height: 100%;

    background-color: $bad-white;
    //overflow: hidden;
    box-shadow: $frame-1;

    z-index: 3;

    @include media($mobile) {
        width: 80px;
        flex: 0 0 80px;
    }
    @include media($tablet) {
        width: 80px;
        flex: 0 0 80px;
    }

    &:hover {
        .feed-items .feed-item i {
            opacity: 1;
            cursor: pointer;
        }
    }

    .feed-items {
        height: 90%;
        width: 100%;

        .feed-item {
            position: relative;
            height: 80px;
            width: 80px;
            margin-left: 10px;
            margin-top: 10px;
            text-align: center;

            @include media($mobile) {
                width: 60px;
                height: 60px;
            }
            @include media($tablet) {
                width: 60px;
                height: 60px;
            }

            background-color: $bad-grey;
            border-radius: 2px;

            i {
                position: absolute;
                right: -5px;
                top: -12px;

                opacity: 0;

                color: $bad-light-white;
                font-size: em(25);

                @include transition(opacity 0.5s ease-in-out);
            }

            img {
                margin-top: 10%;
                height: 80%;
                width: auto;

                -webkit-filter: invert(100%);
            }

            .feed-item-label {
                position: absolute;
                top: 27px;
                right: 100px;

                padding: 7px;
                background-color: $bad-white;
                font-size: em(13);
                box-shadow: $frame-1;
                white-space: nowrap;
                opacity: 0;
                color: $bad-white;

                @include transform(translate3d(30px,0,0));
                @include transition(all 0.4s ease-in-out);
            }

            &:hover {
                .feed-item-label {
                    opacity: 1;
                    @include transform(translate3d(0,0,0));
                }
            }
        }
    }


    .feed-add {
        margin-top: 15px;
        margin-bottom: 15px;
        text-align: center;

        .ion-ios-plus {
            font-size: em(45);
            cursor: pointer;
            color: $bad-black;

            @include transition(all 1s ease-in-out);
            &:hover:before {
                color: $bad-orange;
            }

            &.open:before {
                color: $bad-orange;
                @include transform(rotate(45deg));
            }
        }
    }

    .feed-export {
        position: absolute;
        width: 100%;
        bottom: 0px;
        padding-top: 15px;
        padding-bottom: 15px;
        text-align: center;

        background-color: $bad-white;

        i {
            padding: 3px 11px;
            display: inline-block;
            border-radius: 50%;
            background-color: $bad-black;

            @include transition(all 1s ease-in-out);
            &:hover {
                background-color: $bad-orange;
            }

            &.loading {
                animation: loading 2s ease-in-out 0s infinite;
            }
        }

        .ion-ios-download-outline {
            font-size: em(25);
            cursor: pointer;
            color: $bad-white;
        }
    }
}

#feed-box {
    position: fixed;
    @include size(100% 100%);
    left: 0;
    display: table;

    background-color: $bad-white;
    text-align: center;
    z-index: 2;

    @include transform(translate3d(110%, 0, 0));
    @include transition(transform 1s ease-in-out);
    &.open {
        @include transform(translate3d(0, 0, 0));
    }

    .feed-box-content {
        display: table-cell;
        vertical-align: middle;

        padding-right: 100px;
        padding-left: 200px;

        @include media($mobile) {
            padding-right: 10px;
            padding-left: 10px;
            font-size: 0.7em;
        }

        .feed-box-items {
            width: 60%;
            margin-left: 20%;

            .headline {
                padding-bottom: 15px;
            }

            .feed-box-item {
                position: relative;
                overflow: hidden;
                @include span-columns(3 of 12);
                @include omega(5n);
                margin-bottom: 27px;

                cursor: pointer;
                border-radius: 2px;
                background-color: $bad-grey;

                &:before {
                    content: "";
                    display: block;
                    padding-top: 80%;
                }

                .feed-box-content {
                    position: absolute;
                    top: 0;
                    left: 0;
                    bottom: 0;
                    right: 0;
                }

                img {
                    position: absolute;
                    top: 20%;
                    left: 25%;
                    width: 50%;
                    height: auto;

                    -webkit-filter: invert(100%);
                }

                .feed-box-label {
                    margin-bottom: 15px;
                    margin-left: 15px;
                    color: $bad-white;

                    span {
                        font-size: em(18);
                        position: absolute;
                        left: 15px;
                        bottom: 7px;
                    }

                    i {
                        position: absolute;
                        right: 15px;
                        bottom: 7px;
                        font-size: em(30);
                    }
                }
            }
        }
    }
}

.feed-light-blue {

    &.list {
        background-color: $bad-blue !important;
    }

    &.active {
        background-color: $bad-blue !important;
    }

    @include transition(background-color 0.7s ease-in-out);
    &:hover {
        background-color: $bad-blue !important;
    }
    &.active:hover {
        background-color: $bad-grey !important;
    }
}
.feed-light-orange {

    &.list {
        background-color: $bad-orange !important;
    }

    &.active {
        background-color: $bad-orange !important;
    }

    @include transition(background-color 0.7s ease-in-out);
    &:hover {
        background-color: $bad-orange !important;
    }
    &.active:hover {
        background-color: $bad-grey !important;
    }
}
.feed-light-green {

    &.list {
        background-color: $bad-green!important;
    }

    &.active {
        background-color: $bad-green !important;
    }

    @include transition(background-color 0.7s ease-in-out);
    &:hover {
        background-color: $bad-green !important;
    }
    &.active:hover {
        background-color: $bad-grey !important;
    }
}

@keyframes loading {
    0% {
        background-color: $bad-orange;
        @include transform(scale(1));
    }
    50% {
        background-color: $bad-light-orange;
        @include transform(scale(1.2));
    }
    100% {
        background-color: $bad-orange;
        @include transform(scale(1));
    }
}

